--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "^1.3.4",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
@@ -31,8 +32,5 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "copy-webpack-plugin": "^11.0.0"
   }
 }
